--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <title>Minha página josielserafim</title>
       </head>
       <body>
-           <h1>Mem vindo a minha página de jogos</h1>
-           <p>Aqui vocês terão acesso aos meu jogos.</p>
+           <h1>bem vindo a minha página de jogos</h1>
+           <p>Aqui vocês terão acesso aos meus jogos.</p>
     </body>
 </html>
