--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
       <body>
            <h1>bem vindo a minha página de jogos</h1>
            <p>Aqui vocês terão acesso aos meus jogos.</p>
+        <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
     </body>
 </html>
