--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
            <h1>bem vindo a minha página de jogos</h1>
            <p>Aqui vocês terão acesso aos meus jogos.</p>
         <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
+        <a href= "https://josielserafim.github.io/tocadaspalavras/">Meu Primeiro Jogo!</a>
+       
     </body>
 </html>
